# flaxpdf

./: Makefile.am  README.asciidoc  TODO.txt  configure.ac  flaxpdf.desktop  new updf-64x64.xcf  updf.desktop
po/: POTFILES.in  updf.pot
src/: Makefile.am  config.cpp  config.h  globals.h  header  helpers.cpp  helpers.h  loadfile.cpp  lrtypes.h  main.cpp  main.cpp.save  main.cpp.save2  main.h  updf 128x128.h  updf 64x64.h  view.cpp  view.h
